--- a/css/new-age.css
+++ b/css/new-age.css
@@ -154,9 +154,7 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("../img/bg-pattern.png"), #7b4397;
-  background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430);
-  background: url("../img/bg-pattern.png"), linear-gradient(to left, #7b4397, #dc2430);
+  background: #0E4DAE;
 }
 
 header.masthead .header-content {
@@ -299,16 +297,15 @@ section.cta .cta-content {
 }
 
 section.cta .cta-content h2 {
-  font-size: 50px;
-  max-width: 450px;
+  max-width: 900px;
   margin-top: 0;
   margin-bottom: 25px;
   color: white;
+  
 }
 
 @media (min-width: 768px) {
   section.cta .cta-content h2 {
-    font-size: 80px;
   }
 }
 
@@ -318,7 +315,7 @@ section.cta .overlay {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 section.demo {
@@ -352,6 +349,45 @@ section.demo .demo-content h2 {
 }
 
 section.demo .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+section.purpose {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/cellPhone.jpg");
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+section.purpose .purpose-content {
+  position: relative;
+  z-index: 1;
+}
+
+section.purpose .purpose-content h2 {
+  font-size: 18px;
+  max-width: 450px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  section.purpose .purpose-content h2 {
+    font-size: 18px;
+  }
+}
+
+section.purpose .overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -437,9 +473,9 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 }
 
 .bg-primary {
-  background: #fdcc52;
-  background: -webkit-linear-gradient(#fdcc52, #fdc539);
-  background: linear-gradient(#fdcc52, #fdc539);
+  background: #08306C;
+  background: -webkit-linear-gradient(#08306C, #08306C);
+  background: linear-gradient(#08306C, #08306C);
 }
 
 .text-primary {
