--- a/css/new-age.css
+++ b/css/new-age.css
@@ -396,6 +396,46 @@ section.purpose .overlay {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
+section.presentation {
+  position: relative;
+  padding: 250px 0;
+  background-image: url("../img/trainPhone.jpg");
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+section.presentation .presentation-content {
+  position: relative;
+  z-index: 1;
+}
+
+section.presentation .presentation-content h2 {
+  font-size: 50px;
+  max-width: 450px;
+  margin-top: 0;
+  margin-bottom: 25px;
+  color: white;
+}
+
+@media (min-width: 768px) {
+  section.presentation .presentation-content h2 {
+    font-size: 80px;
+  }
+}
+
+section.presentation .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+
 section.contact {
   text-align: center;
 }
